# isle

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pylintrc  AI_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  LEGO1PROGRESS.HTML  README.md  SETUP.bat  a  b  build.py  code_embedder.py  code_embedder.ts  compile.bat  compile.cmd  configure.py  get_skeleton.py  get_skeleton.ts  isle.mak  isle.mdp  isle.ncb  out.html  package-lock.json  package.json  premake-msvc4.20.cmd  premake-vs2019.cmd  premake-vs2022.cmd  premake5.lua  pyproject.toml  q  qwe  reccmp-project.yml  reconfigureCMake.bat
.github/workflows/: analyze.yml  build.yml  compare.yml  format.yml  legobin.yml  naming.yml  order.yml  unittest.yml
CLI/: main.cpp
CONFIG/: AboutDlg.cpp  AboutDlg.h  ConfigCommandLineInfo.cpp  ConfigCommandLineInfo.h  MainDlg.cpp  MainDlg.h  common.cpp  common.h  config.cpp  config.h  detectdx5.cpp  detectdx5.h  library_mfc.h
CONFIG/res/: config.aps  config.rc  resource.h
CONFIG_orig/: AboutDlg.cpp  AboutDlg.h  StdAfx.cpp  StdAfx.h  config.h
CONFIG_orig/res/: resrc1.h
ISLE/: define.cpp  define.h  isle.cpp  isle.h  isleapp.cpp  isleapp.h  library_msvc.h  library_smartheap.h  main.cpp  mx.cpp
ISLE/res/: arrow.cur  busy.ani  busy.cur  exclaim.cur  isle.rc  no.cur  resource.h
LEGO1/: LEGO1.mingw.def  LEGO1.msvc.def  LegoOmni.def  LegoOmni.mingw.def  MxUnknown100dbdbc.cpp  MxUnknown100dbdbc.h  Send  act1state.cpp  act1state.h  act2brick.cpp  act2brick.h  act2policestation.cpp  act2policestation.h  act3.cpp  act3.h  act3actor.cpp  act3actor.h  act3shark.cpp  act3shark.h  act3state.cpp  act3state.h  actlstate.cpp  actlstate.h  ambulance.cpp  ambulance.h  ambulancemissionstate.cpp  ambulancemissionstate.h  animstate.cpp  animstate.h  beachhouseentity.cpp  beachhouseentity.h  bike.cpp  bike.h  buildingentity.cpp  buildingentity.h  bumpbouy.cpp  bumpbouy.h  carrace.cpp  carrace.h  carracestate.cpp  (+498 more)
LEGO1/3dmanager/: lego3dview.cpp  lego3dview.h  legoview1.h  tglsurface.cpp  tglsurface.h
LEGO1/modeldb/: modeldb.cpp  modeldb.h
LEGO1/mxdirectx/: legodxinfo.cpp  legodxinfo.h  mxdirect3d.cpp  mxdirect3d.h  mxdirectdraw.cpp  mxdirectdraw.h  mxdirectxinfo.cpp  mxdirectxinfo.h  mxstopwatch.h
LEGO1/mxgeometry/: mxgeometry3d.cpp  mxgeometry3d.h  mxgeometry4d.h  mxmatrix.cpp  mxmatrix.h  mxquaternion.h
LEGO1/mxstl/: mxstl.h  stlcompat.h
LEGO1/omni/include/: flic.h  mxactionnotificationparam.h  mxatom.h  mxatomid.h  mxatomidcounter.h  mxaudiomanager.h  mxaudiopresenter.h  mxautolock.h  mxautolocker.h  mxbitmap.h  mxbitset.h  mxcollection.h  mxcolor.h  mxcompositepresenter.h  mxcore.h  mxcorelist.h  mxcriticalsection.h  mxdebug.h  mxdiskstreamcontroller.h  mxdiskstreamprovider.h  mxdisplaysurface.h  mxdsaction.h  mxdsactionlist.h  mxdsanim.h  mxdsbuffer.h  mxdschunk.h  mxdsevent.h  mxdsfile.h  mxdsmediaaction.h  mxdsmultiaction.h  mxdsobject.h  mxdsobjectaction.h  mxdsparallelaction.h  mxdsselectaction.h  mxdsserialaction.h  mxdssound.h  mxdssource.h  mxdsstill.h  mxdsstreamingaction.h  mxdssubscriber.h  (+80 more)
LEGO1/realtime/: lodlist.h  matrix.cpp  matrix.h  matrix4d.h  matrix4d.inl.h  mxmatrix.cpp  mxmatrix.h  mxvector.cpp  mxvector.h  orientableroi.cpp  orientableroi.h  realtime.cpp  realtime.h  realtimeview.cpp  realtimeview.h  roi.h  vector.cpp  vector.h  vector2d.h  vector2d.inl  vector2d.inl.h  vector3d.h  vector3d.inl  vector3d.inl.h  vector4d.inl.h
LEGO1/res/: arrow.cur  busy.cur  leaf_0.cur  leaf_1.cur  leaf_2.cur  leaf_3.cur  leaf_4.cur  leaf_5.cur  leaf_6.cur  leaf_7.cur  lego1.rc  lego1_beta.rc  resource.h
LEGO1/tgl/: tgl.h  tglvector.h
LEGO1/tgl/d3drm/: camera.cpp  device.cpp  group.cpp  impl.h  light.cpp  mesh.cpp  meshbuilder.cpp  renderer.cpp  something.cpp  texture.cpp  unk.cpp  view.cpp
LEGO1/viewmanager/: viewlod.cpp  viewlod.h  viewlodlist.cpp  viewlodlist.h  viewmanager.cpp  viewmanager.h  viewroi.cpp  viewroi.h
app/: define.cpp  define.h  isle.cpp  isle.h  main.cpp
app/res/: isle.rc  no.cur
cmake/: dx5sdk.cmake  reccmp.cmake
cmake/Toolchain/: msvc42-common.cmake  msvc42-linux.cmake  msvc42.cmake
cmake/Toolchain/wrappers/: build_msvctricks.sh  cl  (+5 more)
docker/: Dockerfile  build.sh  entrypoint.sh
docs/: README.md  animation.ksy  dta.ksy  history.ksy  players.ksy  savegame.ksy  tex.ksy  wdb.ksy
docs/samples/: BLDRINF.DTA  Dbfrfn.tex  G0.GS  G1.GS  G2.GS  History.gsi  Players.gsi  pns065rd.ani
dx5sdk/: .gitignore
dx5sdk/cdrom/: setup.iss
isle/: CMakeLists.txt
isle/ext/: lego1.def  lego1.exp
isle/src/: define.cpp  isle.cpp  main.cpp
isle/src/res/: busy.cur  isle.rc
lego1/: CMakeLists.txt
lego1/include/: legobuildingmanager.h  legoinputmanager.h  legomodelpresenter.h  legonavcontroller.h  mxatomid.h  mxcriticalsection.h  mxdsaction.h  mxdsfile.h  mxomnicreateparam.h  mxticklemanager.h  mxtimer.h  mxvariabletable.h  mxvideoparam.h
lego1/src/: dllmain.cpp  mxcriticalsection.cpp
lib/: define.h  lego1.lib  legoanimationmanager.h  legogamestate.h  legoinputmanager.h  legopartpresenter.h  legoroi.h  legovideomanager.h  legoworldpresenter.h  mxbitmap.h  mxcore.h  mxdsfile.h  mxomnicreateparam.h  mxomnicreateparambase.h  mxpalette.h  mxrect32.h  mxstreamcontroller.h  mxstreamer.h  mxstring.h  mxvideoparam.h  mxvideoparamflags.h
nix/: default.nix  docker.nix
nix/npins/: sources.json
scripts/: cm420
tools/: README.md  datacmp.py  entropy.py  entropy.sh  makectx.py  multi-analyze.ps1  multi-build.ps1  multi-prepare.ps1  patch_c2.py  requirements.txt
tools/checkorder/: checkorder.py  requirements.txt
tools/decomplint/: decomplint.py
tools/ghidra_scripts/: README.md  SyncFunctionsToGhidra.py  import_functions_and_types_from_pdb.py  import_functions_from_pdb.py
tools/isledecomp/: .gitignore  setup.py
tools/ncc/: ncc.py  ncc.style  skip.yaml  skip.yml
tools/reccmp/: reccmp.js  reccmp.py  requirements.txt  template.html
tools/reccomp/: reccomp.py
tools/roadmap/: roadmap.py
tools/stackcmp/: stackcmp.py
tools/verexp/: verexp.py
tools/vtable/: vtable.py
util/: compat.h  decomp.h
(+646 files in other folders)
